# OneDrop

./: .env.example  .gitignore  .gitleaks.toml  CHANGELOG.md  LICENSE.md  Makefile  README.md  SECURITY.md  pyproject.toml  setup.sh
.github/actions/setup/: action.yml
.github/workflows/: ci.yml  security.yml
src/onedrop/: __main__.py  audit.py  auth.py  checksum.py  cli.py  config.py  download_limiter.py  qr.py  rendering.py  server.py  token_auth.py  utils.py
src/onedrop/data/: common_passwords.txt
src/onedrop/templates/: landing.html
tests/: conftest.py  test_auth.py  test_checksum.py  test_cli.py  test_download_limiter.py  test_landing_page.py  test_network.py  test_qr.py  test_security_hardening.py  test_server_integration.py
