[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onedrop"
version = "0.2.0"
description = "Single-file-transfer HTTPS server for trusted LANs, with auth, TLS, and audit logging."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
qr = ["qrcode>=7.4"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "qrcode>=7.4",
]

[project.scripts]
onedrop = "onedrop.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "S", "C90"]
# S101: assert is fine in tests. S104: binding to 0.0.0.0 is an explicit,
# documented default (see network.describe_bind_exposure), not an oversight.
ignore = ["S101", "S104"]

[tool.ruff.lint.per-file-ignores]
# Asserts and hardcoded test passwords are expected in tests; tests also
# legitimately shell out to a fixed, trusted `openssl` invocation to mint
# throwaway certs, which ruff's subprocess rules otherwise flag.
"tests/*" = ["S101", "S106", "S603", "S607"]
# server.py embeds an HTML/CSS template as a string; wrapping those lines
# to 88 chars would hurt readability of the template for no real benefit.
# It also shells out to a fixed, trusted `openssl` invocation to auto-generate certs.
"src/onedrop/server.py" = ["E501", "S603", "S607"]

[tool.mypy]
python_version = "3.10"
mypy_path = "src"
ignore_missing_imports = true
disallow_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=onedrop --cov-report=term-missing"
